Fix file database application